--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -1,5 +1,5 @@
   .div2{
-    background-image: url('../images/entregables/images/bg-price.svg');
+    background-image: url('../images/bg-price.svg');
     background-repeat: no-repeat;
     background-size: cover;
     padding-bottom: 5%;
@@ -29,7 +29,7 @@
   }
 @media only screen and (min-width: 768px){
   .div2{
-    background-image: url('../images/entregables/images/bg-price.svg');
+    background-image: url('../images/bg-price.svg');
     background-repeat: no-repeat;
     background-size: cover;
     padding-bottom: 5%;
@@ -56,7 +56,7 @@
 }
 @media only screen and (min-width: 992px){
   .div2{
-    background-image: url('../images/entregables/images/bg-price.svg');
+    background-image: url('../images/bg-price.svg');
     background-repeat: no-repeat;
     background-size: cover;
     padding-bottom: 5%;
@@ -83,7 +83,7 @@
 }
 @media only screen and (min-width: 1360px){
     .div2{
-    background-image: url('../images/entregables/images/bg-price.svg');
+    background-image: url('../images/bg-price.svg');
     background-repeat: no-repeat;
     background-size: cover;
     padding-bottom: 5%;
