--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -3,13 +3,14 @@
 
 @import 'base/reset';
 @import 'base/typography';
+@import 'base/animations';
 
+@import 'layout/grid';
 @import 'layout/header';
 @import 'layout/footer';
 @import 'layout/main';
 @import 'layout/navigations';
 @import 'layout/section';
-@import 'layout/grid';
 
 @import 'components/buttons';
 @import 'components/cards';
