--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,11 +1,11 @@
 
 @import 'abstracts/variables';
 
+@import 'base/grid';
 @import 'base/reset';
 @import 'base/typography';
 @import 'base/animations';
 
-@import 'layout/grid';
 @import 'layout/header';
 @import 'layout/footer';
 @import 'layout/main';
